Include DBDs in build

--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="WoWDBDefs\definitions\**" LinkBase="definitions\" CopyToOutputDirectory="Always" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <ProjectReference Include="CascLib\CascLib\CascLib.csproj" />
     <ProjectReference Include="DBCD\DBCD\DBCD.csproj" />
   </ItemGroup>
