--- a/config.json
+++ b/config.json
@@ -3,6 +3,6 @@
     "definitionDir": "WoWDBDefs/definitions",
     "listfileURL": "https://github.com/wowdev/wow-listfile/raw/master/community-listfile.csv",
     "wowFolder": "C:/World of Warcraft",
-    "wowProduct": "wowt"
+    "wowProduct": "wow"
   }
 }
