--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 ﻿{
   "config": {
     "definitionDir": "WoWDBDefs/definitions",
+    "dbcFolder": "dbcs",
     "listfileURL": "https://github.com/wowdev/wow-listfile/raw/master/community-listfile.csv",
     "wowFolder": "C:/World of Warcraft",
     "wowProduct": "wow"
