--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
     "dbcFolder": "dbcs",
     "listfileURL": "https://github.com/wowdev/wow-listfile/raw/master/community-listfile.csv",
     "wowFolder": "C:/World of Warcraft",
-    "wowProduct": "wow"
+    "wowProduct": "wow",
+    "region":  "eu"
   }
 }
