Add TACT key/listfile auto-updating

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "definitionDir": "WoWDBDefs/definitions",
     "dbcFolder": "dbcs",
     "listfileURL": "https://github.com/wowdev/wow-listfile/raw/master/community-listfile.csv",
+    "tactKeyURL": "https://github.com/wowdev/TACTKeys/raw/master/WoW.txt",
     "wowFolder": "C:/World of Warcraft",
     "wowProduct": "wow",
     "region":  "eu"
