Add support for loading different locales

--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
     "listfileURL": "https://github.com/wowdev/wow-listfile/raw/master/community-listfile.csv",
     "tactKeyURL": "https://github.com/wowdev/TACTKeys/raw/master/WoW.txt",
     "wowFolder": "C:/World of Warcraft",
-    "wowProduct": "wow",
-    "region":  "eu"
+    "wowProduct": "wowt",
+    "region": "eu",
+    "locale": "enUS"
   }
 }
