Fix canvas issue, 'server'-side BLP conversion

--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -53,6 +53,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.0.2" />
   </ItemGroup>
   
   <ItemGroup>
