--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "config": {
     "definitionDir": "WoWDBDefs/definitions",
     "dbcFolder": "dbcs",
+    "manifestFolder":  "manifests",
     "listfileURL": "https://github.com/wowdev/wow-listfile/releases/latest/download/community-listfile-withcapitals.csv",
     "tactKeyURL": "https://github.com/wowdev/TACTKeys/raw/master/WoW.txt",
     "wowFolder": "C:/World of Warcraft",
