--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "SereniaBLPLib"]
 	path = SereniaBLPLib
 	url = https://github.com/Marlamin/SereniaBLPLib
+[submodule "WoWFormatLib"]
+	path = WoWFormatLib
+	url = https://github.com/Marlamin/WoWFormatLib
