--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -58,6 +58,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="versionHistory.json" />
+  </ItemGroup>
   
   <ItemGroup>
     <None Remove="debug.log" />
