--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="knownPushIDs.json" />
     <Content Remove="versionHistory.json" />
   </ItemGroup>
   
