Move all navs into single file

--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -67,6 +67,7 @@
     <Content Remove="knownPushIDs.json" />
     <Content Remove="versionHistory.json" />
     <Content Remove="wwwroot\files\naming.html" />
+    <Content Remove="wwwroot\header.html" />
   </ItemGroup>
   
   <ItemGroup>
