Add preferHighResTextures setting

--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
     "region": "eu",
     "locale": "enUS",
     "showAllFiles": false,
-    "extractionDir": "extract"
+    "extractionDir": "extract",
+    "preferHighResTextures": false
   }
 }
