--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -73,11 +73,15 @@
   <ItemGroup>
     <None Remove="cachedLookups.txt" />
     <None Remove="cachedUnknowns.txt" />
+    <None Remove="chash.txt" />
+    <None Remove="community-listfile-withcapitals.csv" />
+    <None Remove="community-listfile.csv" />
     <None Remove="db2fdid.txt" />
     <None Remove="debug.log" />
     <None Remove="exported-listfile.csv" />
     <None Remove="exported-tactkeys.csv" />
     <None Remove="exported-unknown.csv" />
+    <None Remove="groupNames.txt" />
     <None Remove="listfile.csv" />
     <None Remove="listfile.csv.bak" />
     <None Remove="listfile.txt" />
