Creatures page (for debug rn)

--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Content Remove="knownPushIDs.json" />
     <Content Remove="versionHistory.json" />
+    <Content Remove="wwwroot\db\creatures.html" />
     <Content Remove="wwwroot\files\naming.html" />
     <Content Remove="wwwroot\header.html" />
   </ItemGroup>
