Add opt-in setting to use TACTSharp instead of CASCLib
Note that the Namer/Model info things are NYI with TACTSharp

--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
     "locale": "enUS",
     "showAllFiles": false,
     "extractionDir": "extract",
-    "preferHighResTextures": false
+    "preferHighResTextures": false,
+    "useTACTSharp": false
   }
 }
