--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -8,6 +8,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Version>0.8.3</Version>
+    <ApplicationIcon>wwwroot\img\cog.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
