--- a/wow.tools.local.csproj
+++ b/wow.tools.local.csproj
@@ -19,6 +19,7 @@
     <Compile Remove="DBDiffer\**" />
     <Compile Remove="TACTSharp\**" />
     <Compile Remove="temp\**" />
+    <Compile Remove="wow-filetags\**" />
     <Compile Remove="WoWFormatLib\**" />
     <Compile Remove="WoWNamingLib\**" />
     <Content Remove="cache\**" />
@@ -28,6 +29,7 @@
     <Content Remove="DBDiffer\**" />
     <Content Remove="TACTSharp\**" />
     <Content Remove="temp\**" />
+    <Content Remove="wow-filetags\**" />
     <Content Remove="WoWFormatLib\**" />
     <Content Remove="WoWNamingLib\**" />
     <EmbeddedResource Remove="cache\**" />
@@ -37,6 +39,7 @@
     <EmbeddedResource Remove="DBDiffer\**" />
     <EmbeddedResource Remove="TACTSharp\**" />
     <EmbeddedResource Remove="temp\**" />
+    <EmbeddedResource Remove="wow-filetags\**" />
     <EmbeddedResource Remove="WoWFormatLib\**" />
     <EmbeddedResource Remove="WoWNamingLib\**" />
     <None Remove="cache\**" />
@@ -46,6 +49,7 @@
     <None Remove="DBDiffer\**" />
     <None Remove="TACTSharp\**" />
     <None Remove="temp\**" />
+    <None Remove="wow-filetags\**" />
     <None Remove="WoWFormatLib\**" />
     <None Remove="WoWNamingLib\**" />
   </ItemGroup>
@@ -65,6 +69,7 @@
     <Content Remove="wwwroot\db\quests.html" />
     <Content Remove="wwwroot\files\install.html" />
     <Content Remove="wwwroot\files\naming.html" />
+    <Content Remove="wwwroot\files\tagging.html" />
     <Content Remove="wwwroot\header.html" />
     <Content Remove="wwwroot\js\m3modelviewer.js" />
     <Content Remove="wwwroot\mv\m3.html" />
@@ -74,6 +79,7 @@
     <None Remove="cachedLookups.txt" />
     <None Remove="cachedUnknowns.txt" />
     <None Remove="chash.txt" />
+    <None Remove="collectables_dump.txt" />
     <None Remove="community-listfile-withcapitals.csv" />
     <None Remove="community-listfile.csv" />
     <None Remove="db2fdid.txt" />
@@ -82,6 +88,7 @@
     <None Remove="exported-tactkeys.csv" />
     <None Remove="exported-unknown.csv" />
     <None Remove="groupNames.txt" />
+    <None Remove="groupNames_sorted.txt" />
     <None Remove="hotfixes.db" />
     <None Remove="listfile.csv" />
     <None Remove="listfile.csv.bak" />
@@ -109,6 +116,7 @@
     <ProjectReference Include="DBCD\DBCD\DBCD.csproj" />
     <ProjectReference Include="DBDiffer\DBDiffer\DBDiffer.csproj" />
     <ProjectReference Include="TACTSharp\TACTSharp\TACTSharp.csproj" />
+    <ProjectReference Include="wow-filetags\tools\C#\wow-filetags\WoWTagLib\WoWTagLib.csproj" />
     <ProjectReference Include="WoWFormatLib\WoWFormatLib\WoWFormatLib.csproj" />
     <ProjectReference Include="WoWNamingLib\WoWNamingLib\WoWNamingLib.csproj" />
   </ItemGroup>
